@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/alpha-archscript.sh,v 1.8 2005/01/29 04:05:46 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/alpha-archscript.sh,v 1.9 2005/03/03 22:36:08 wolf31o2 Exp $
 
 case $1 in
 	kernel)
@@ -24,7 +24,8 @@ case $1 in
 		cdtar=${clst_livecd_cdtar}
 		[ -z "$cdtar" ] && die "Required key livecd/cdtar not specified, exiting"
 		tar xjpvf ${cdtar} -C ${clst_cdroot_path} || die "Couldn't extract cdtar ${cdtar}"
-		
+		# Here is where we poke in our identifier
+		touch ${clst_cdroot_path}/livecd
 		[ -z "${clst_boot_kernel}" ] && die "Required key boot/kernel not specified, exiting"
 		
 		# unpack the kernel(s) that were built in kmerge.sh
