@@ -1,6 +1,14 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.179 2005/03/03 22:05:05 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.180 2005/03/03 22:36:08 wolf31o2 Exp $
+
+  03 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
+  livecd/runscript/ppc-archscript.sh, livecd/runscript/sparc-archscript.sh,
+  livecd/runscript/sparc64-archscript.sh,
+  livecd/runscript/x86-archscript.sh:
+  Added a new empty livecd file to each archscript. This will be used for an
+  identifier by genkernel to allow booting from a non-primary CDROM.
 
   03 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
   Catalyst 1.1.6 is here.
